Fix menu on mobile

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -61,7 +61,7 @@ $breakpoint-tablet: 768px;
   z-index: 100;
   width: auto;
   height: 40px;
-  width: 40px;
+  width: 85px;
   margin-left: -15px;
   top: var(--spacer-3);
   right: var(--spacer-3);
